src/styles/RecipeFinder.css
.dish-input {
  padding: 0.2rem;
  border: 0;
  font-size: 1.3rem;
  &:focus {
    border: 0
  }

  font-family: "Inter", sans-serif;
}

.dish-input:focus-visible {
  outline: none;
}

.find-recipe-btn {
  font-size: 1.2rem;
  border-radius: 0.75rem;
  cursor: pointer;
  background-color: rgb(86, 155, 59);
  color: white;
  border: 0.1rem solid rgb(214, 209, 209);
  padding: 0.4rem;
  padding-left: 0.7rem;
  padding-right: 0.7rem;

  font-family: "Inter", sans-serif;
}

.find-recipe-btn:disabled {
  color: rgb(230, 228, 228);
  border: 0.1rem solid rgb(160, 159, 159);
  background-color: rgb(146, 160, 140);
  cursor: auto;
}

.input-with-btn {
  border: 0.1rem solid rgb(214, 209, 209);
  padding: 0.4rem;
  border-radius: 0.75rem;
}

.container {
  display: flex;
  gap: 2rem;
  flex-direction: column;
  justify-content: center;
  width: auto;
  align-items: center;
  height: 100%;
}

.form {
  display: flex;
  align-items: center;
  justify-content: center;
}

.recipe-details {
  width: 40rem;
}

.ingredient-list-item {
  margin-bottom: 0.5rem;
}

.instructions-list {
  padding-left: 1.25rem;
}

.instruction-list-item {
  margin-bottom: 0.75rem;
}

